crates/rome_js_formatter/tests/specs/prettier/js/multiparser-invalid/text.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: text.js

---
# Input
```js
foo = foo`\u{prettier}\u{0065}`;
foo = html`\u{prettier}\u{0065}`;
foo = graphql`\u{prettier}\u{0065}`;
foo = markdown`\u{prettier}\u{0065}`;
foo = css`\u{prettier}\u{0065}`;
foo = /* HTML */`\u{prettier}\u{0065}`;
foo = /* GraphQL */`\u{prettier}\u{0065}`;

foo = foo`\u{prettier}${foo}pr\u{0065}ttier`;
foo = html`\u{prettier}${foo}pr\u{0065}ttier`;
foo = graphql`\u{prettier}${foo}pr\u{0065}ttier`;
foo = markdown`\u{prettier}${foo}pr\u{0065}ttier`;
foo = css`\u{prettier}${foo}pr\u{0065}ttier`;
foo = /* HTML */`\u{prettier}${foo}pr\u{0065}ttier`;
foo = /* GraphQL */`\u{prettier}${foo}pr\u{0065}ttier`;

foo = foo`pr\u{0065}ttier${foo}\u{prettier}`;
foo = html`pr\u{0065}ttier${foo}\u{prettier}`;
foo = graphql`pr\u{0065}ttier${foo}\u{prettier}`;
foo = markdown`pr\u{0065}ttier${foo}\u{prettier}`;
foo = css`pr\u{0065}ttier${foo}\u{prettier}`;
foo = /* HTML */`pr\u{0065}ttier${foo}\u{prettier}`;
foo = /* GraphQL */`pr\u{0065}ttier${foo}\u{prettier}`;

foo = foo`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = html`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = graphql`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = markdown`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = css`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = /* HTML */`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = /* GraphQL */`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;

```

# Output
```js
foo = foo`\u{prettier}\u{0065}`;
foo = html`\u{prettier}\u{0065}`;
foo = graphql`\u{prettier}\u{0065}`;
foo = markdown`\u{prettier}\u{0065}`;
foo = css`\u{prettier}\u{0065}`;
foo = /* HTML */ `\u{prettier}\u{0065}`;
foo = /* GraphQL */ `\u{prettier}\u{0065}`;

foo = foo`\u{prettier}${foo}pr\u{0065}ttier`;
foo = html`\u{prettier}${foo}pr\u{0065}ttier`;
foo = graphql`\u{prettier}${foo}pr\u{0065}ttier`;
foo = markdown`\u{prettier}${foo}pr\u{0065}ttier`;
foo = css`\u{prettier}${foo}pr\u{0065}ttier`;
foo = /* HTML */ `\u{prettier}${foo}pr\u{0065}ttier`;
foo = /* GraphQL */ `\u{prettier}${foo}pr\u{0065}ttier`;

foo = foo`pr\u{0065}ttier${foo}\u{prettier}`;
foo = html`pr\u{0065}ttier${foo}\u{prettier}`;
foo = graphql`pr\u{0065}ttier${foo}\u{prettier}`;
foo = markdown`pr\u{0065}ttier${foo}\u{prettier}`;
foo = css`pr\u{0065}ttier${foo}\u{prettier}`;
foo = /* HTML */ `pr\u{0065}ttier${foo}\u{prettier}`;
foo = /* GraphQL */ `pr\u{0065}ttier${foo}\u{prettier}`;

foo = foo`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = html`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = graphql`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = markdown`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = css`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = /* HTML */ `pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
foo = /* GraphQL */ `pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;

```

# Errors
```
error: expected hex digits for a unicode code point escape, but encountered an invalid character
  ┌─ text.js:6:21
  │
6 │ foo = /* HTML */`\u{prettier}\u{0065}`;
  │                     ^

error: expected hex digits for a unicode code point escape, but encountered an invalid character
  ┌─ text.js:7:24
  │
7 │ foo = /* GraphQL */`\u{prettier}\u{0065}`;
  │                        ^

error: expected hex digits for a unicode code point escape, but encountered an invalid character
   ┌─ text.js:14:21
   │
14 │ foo = /* HTML */`\u{prettier}${foo}pr\u{0065}ttier`;
   │                     ^

error: expected hex digits for a unicode code point escape, but encountered an invalid character
   ┌─ text.js:15:24
   │
15 │ foo = /* GraphQL */`\u{prettier}${foo}pr\u{0065}ttier`;
   │                        ^

error: expected hex digits for a unicode code point escape, but encountered an invalid character
   ┌─ text.js:22:42
   │
22 │ foo = /* HTML */`pr\u{0065}ttier${foo}\u{prettier}`;
   │                                          ^

error: expected hex digits for a unicode code point escape, but encountered an invalid character
   ┌─ text.js:23:45
   │
23 │ foo = /* GraphQL */`pr\u{0065}ttier${foo}\u{prettier}`;
   │                                             ^

error: expected hex digits for a unicode code point escape, but encountered an invalid character
   ┌─ text.js:30:42
   │
30 │ foo = /* HTML */`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
   │                                          ^

error: expected hex digits for a unicode code point escape, but encountered an invalid character
   ┌─ text.js:31:45
   │
31 │ foo = /* GraphQL */`pr\u{0065}ttier${foo}\u{prettier}${bar}pr\u{0065}ttier`;
   │                                             ^


```


